--- a/browsertest/browsertest.html
+++ b/browsertest/browsertest.html
@@ -34,7 +34,7 @@
           } else {
             userbase
               .signIn({
-                username: "f13",
+                username: "h13",
                 password: "test123",
                 rememberMe: "local",
               })
